# backend_crm

./: .env  .env.sample  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
backend_crm/: asgi.py  settings.py  urls.py  wsgi.py
crm/: admin.py  models.py  serializers.py  urls.py  views.py
crm/migrations/: 0001_initial.py
